...
      type="button" 
      onClick={onClick} 
      style={style}
    >
      <img
        src={imageSrc}
        alt="Close"
        className="close-button-image"
      />
    </button>
  );
};

...
